# ipfs-indexer

./: .gitignore  Cargo.toml
res/ddl/: 0_db.sql  10_tables.sql  99_changes.sql
src/: main.rs
src/db/: model.rs  schema.rs
